--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,12 +13,11 @@ body {
   overflow: scroll;
   background: #fff;
   margin: auto;
-  padding: 2cm;
+  padding: 1cm 2cm 1cm 3cm;
 }
 
 .title-area {
-  /* margin-bottom: 1.5cm; */
-  height: 230px;
+  height: 240px;
   display: flex;
 }
 
@@ -36,16 +35,20 @@ body {
 
 .title-area>svg {
   flex: 5;
-  /* border: 1px solid #aaa; */
 }
 
 .legend-area {
   width: 50%;
 }
 
+.sections {
+  padding: 25px 0 0 0;
+}
+
 .section {
-  height: 8.3cm;
-  margin-bottom: 0.5cm;
+  height: 12cm;
+  margin-bottom: 10px;
+  /* border-bottom: 1px solid #ccc; */
 }
 
 .section>.section-title {
@@ -54,7 +57,6 @@ body {
 }
 
 .section-drawing>svg {
-  width: 1730px;
-  height: 250px;
-  margin: 10px 0 0 0
+  width: 1700px;
+  height: 400px;
 }
