--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .title-area {
-  height: 240px;
+  height: 260px;
   display: flex;
 }
 
@@ -46,14 +46,23 @@ body {
 }
 
 .section {
-  height: 12cm;
-  margin-bottom: 10px;
+  height: 11cm;
+  margin-bottom: 50px;
   /* border-bottom: 1px solid #ccc; */
 }
 
 .section>.section-title {
   font-size: 24pt;
   font-weight: 300;
+}
+
+.first-section>.section-title {
+  margin-bottom: 15px;
+}
+
+.third-section>.section-drawing {
+  position: relative;
+  top: -5px;
 }
 
 .section-drawing>svg {
